--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,8 @@
-fastapi==0.116.1
-uvicorn==0.35.0
-streamlit==1.47.1
-
-langchain==0.3.27
-langchain-huggingface==0.3.1
-langchain-groq==0.3.6
-langchain-pinecone==0.2.12
-langchain-milvus==0.2.1
-langchain-ollama==0.3.6
-langchain-qdrant==0.2.1
-
-pinecone-client==6.0.0
-
-
-huggingface-hub==0.34.4
-transformers==4.56.1
-sentence-transformers==5.1.0
-torch==2.8.0
-tiktoken==0.11.0
-
-python-dotenv==1.1.1
-orjson==3.11.1
+fastapi
+uvicorn
+langchain
+langchain-groq
+langchain-pinecone
+langchain-huggingface
+pinecone-client
+python-dotenv
