--- a/vercel.json
+++ b/vercel.json
@@ -1,31 +1,13 @@
 {
   "version": 2,
   "builds": [
-    {
-      "src": "main.py",
-      "use": "@vercel/python"
-    },
-    {
-      "src": "static/**",
-      "use": "@vercel/static"
-    }
+    { "src": "main.py", "use": "@vercel/python" },
+    { "src": "static/**", "use": "@vercel/static" }
   ],
   "routes": [
-    {
-      "src": "/static/(.*)",
-      "dest": "/static/$1"
-    },
-    {
-      "src": "/(.*\\.html)",
-      "dest": "/$1"
-    },
-    {
-      "src": "/api/(.*)",
-      "dest": "main.py"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "main.py"
-    }
+    { "src": "/static/(.*)", "dest": "/static/$1" },      
+    { "src": "/(quiz\\.html|chat\\.html)", "dest": "/static/$1" },  
+    { "src": "/api/(.*)", "dest": "main.py" },          
+    { "src": "/", "dest": "main.py" }                   
   ]
 }
